// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Lines translation Should translate test line "Assert ... then continue excluded" 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then continue excluded" without appConfig 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then continue" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then continue" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then exit" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited then stop test",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then exit" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited then stop test",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then fail" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited then fail",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then fail" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited then fail",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then warn" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited then warn",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then warn" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited then warn",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... timeout ... then continue" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... timeout ... then continue" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ... only if ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ... only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back excluded" 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back excluded" without appConfig 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Set window size" 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "text",
              "value": "123x234",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "size",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Resize window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Set window size" without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "text",
              "value": "123x234",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "size",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Resize window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data excluded" 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data excluded" without appConfig 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on active element once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on active element once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... every ... exactly ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " exactly ",
    },
    {
      "type": "input",
      "value": "4",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "1.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... every ... exactly ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " exactly ",
    },
    {
      "type": "input",
      "value": "4",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "1.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on position ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on position ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on relative position ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "relative position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on relative position ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Click on ",
    },
    {
      "type": "subject",
      "value": "relative position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Comment" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "# This is a comment",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Comment" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "# This is a comment",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Double tap on element ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Double tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Double tap on element ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Double tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ... excluded" 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": [
            {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ... excluded" without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": [
            {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": [
            {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": [
            {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET cookies" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve value for "cook" cookie",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET cookies" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve value for "cook" cookie",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element attributes" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting [id, type, class] attributes of "element-api-id" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element attributes" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting [id, type, class] attributes of "element-api-id" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties with array selector" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of |"#app" element| -> |"div" element| -> |"span" element|",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties with array selector" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of |"#app" element| -> |"div" element| -> |"span" element|",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of "element-api-id" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of "element-api-id" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element handle" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting handle of "element-api-id" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element handle" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting handle of "element-api-id" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element props" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve info of "div.className" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element props" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve info of "div.className" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle by "home page" text" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting handle of link with "home page" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle by "home page" text" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting handle of link with "home page" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle containing "home" text" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting handle of link containing "home page" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle containing "home" text" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Getting handle of link containing "home page" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET location" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve value of current location",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET location" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve value of current location",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "JS expression" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve value of execution "1 + 1"",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "JS expression" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Retrieve value of execution "1 + 1"",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... for ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Long tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " for ",
    },
    {
      "type": "input",
      "value": "2s",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... for ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Long tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " for ",
    },
    {
      "type": "input",
      "value": "2s",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Long tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Long tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to active element" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to active element" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ... excluded" 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ... excluded" without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to position ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to position ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to relative position ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "relative position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to relative position ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Move pointer to ",
    },
    {
      "type": "subject",
      "value": "relative position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open Deep Link ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "some-deep-link",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "Deep Link",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Open Deep Link",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open Deep Link ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "some-deep-link",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "Deep Link",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Open Deep Link",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open URL ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Open URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open URL ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Open URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at deep link ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Open application at deep link some deep link",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at deep link ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Open application at deep link some deep link",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage excluded" 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage excluded" without appConfig 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at relative URL ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "/some/path",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "relative path",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Open application at relative URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at relative URL ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "/some/path",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "relative path",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Open application at relative URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Poll URL ... until response is ..." 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "poll URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expected response",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "until receive",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Poll URL every 0.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Poll URL ... until response is ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "poll URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expected response",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "until receive",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Poll URL every 0.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... every ... exactly ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": " exactly ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... every ... exactly ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": " exactly ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": "",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": "",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": ", ",
    },
    {
      "type": "input",
      "value": "RIGHT",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Press ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": ", ",
    },
    {
      "type": "input",
      "value": "RIGHT",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press long ... for ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Press long ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": " for 1000ms ",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press long ... for ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Press long ",
    },
    {
      "type": "input",
      "value": "LEFT",
    },
    {
      "type": "text",
      "value": " for 1000ms ",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Restart application" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Restart application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Restart application" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Restart application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Resume background application" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Resume background application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Resume background application" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Resume background application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... exactly ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Run test (",
    },
    {
      "type": "code",
      "value": "unkn...id-1",
    },
    {
      "type": "text",
      "value": ") exactly ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... exactly ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Run test (",
    },
    {
      "type": "code",
      "value": "unkn...id-1",
    },
    {
      "type": "text",
      "value": ") exactly ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Run test ",
    },
    {
      "type": "subject",
      "value": "Snippet 1",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Run test ",
    },
    {
      "type": "subject",
      "value": "Snippet 1",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Run test ",
    },
    {
      "type": "subject",
      "value": "Snippet 1",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Run test ",
    },
    {
      "type": "subject",
      "value": "Snippet 1",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... until ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Run test ",
    },
    {
      "type": "subject",
      "value": "Snippet 1",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... until ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Run test ",
    },
    {
      "type": "subject",
      "value": "Snippet 1",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from active element" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Scroll from ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
    {
      "type": "text",
      "value": " down by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from active element" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Scroll from ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
    {
      "type": "text",
      "value": " down by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from element ... to ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Scroll from ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
    {
      "type": "text",
      "value": " left by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from element ... to ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Scroll from ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
    {
      "type": "text",
      "value": " left by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to element ... once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to element ... once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window every ... exactly ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
    {
      "type": "text",
      "value": " exactly ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window every ... exactly ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
    {
      "type": "text",
      "value": " exactly ",
    },
    {
      "type": "input",
      "value": "2",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "4",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "1.2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Send text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "window",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "4",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "1.2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to active element" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Set text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to active element" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Set text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ... only if ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Set text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ... only if ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Set text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Set text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Set text ",
    },
    {
      "type": "input",
      "value": "text to send",
    },
    {
      "type": "text",
      "value": " to ",
    },
    {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on active element" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Single tap on ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on active element" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Single tap on ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on element ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Single tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on element ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Single tap on ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ... excluded" 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Sleep ",
    },
    {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ... excluded" without appConfig 1`] = `
{
  "children": [],
  "status": "excluded",
  "title": [
    {
      "type": "text",
      "value": "Sleep ",
    },
    {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ..." 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Sleep ",
    },
    {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ..." without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Sleep ",
    },
    {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from active element once" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
    {
      "type": "text",
      "value": " right by 3px in 1ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from active element once" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    {
      "type": "subject",
      "value": "active element",
    },
    {
      "type": "text",
      "value": " right by 3px in 1ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from element ... to ... in ... until ... every ... max ..." 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
    {
      "type": "text",
      "value": " left by 1px in 3ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from element ... to ... in ... until ... every ... max ..." without appConfig 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    {
      "type": "subject",
      "value": "element",
    },
    {
      "type": "text",
      "value": " until condition is met max ",
    },
    {
      "type": "input",
      "value": "6",
    },
    {
      "type": "text",
      "value": "x every ",
    },
    {
      "type": "input",
      "value": "5.7s",
    },
    {
      "type": "text",
      "value": " left by 1px in 3ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Wait until ... max ... then continue" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Wait until ... max ... then continue" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "close application" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Close application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "close application" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Close application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "get last screenshot for visual testing" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Get last screenshot for visual testing (raw)",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "get last screenshot for visual testing" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Get last screenshot for visual testing (raw)",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "get screenshot" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Take screenshot (base64)",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "get screenshot" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Take screenshot (base64)",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "save screenshot" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Save screenshot ("screen.jpg")",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "save screenshot" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Save screenshot ("screen.jpg")",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "setOrientation" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Set screen orientation to ",
    },
    {
      "type": "input",
      "value": "Portrait",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "setOrientation" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Set screen orientation to ",
    },
    {
      "type": "input",
      "value": "Portrait",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "suspend application" 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Suspend application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "suspend application" without appConfig 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Suspend application",
    },
  ],
  "type": "test-line",
}
`;
